[package]
name = "rust-qsieve"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
test = true
bench = true

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
anstream = "=0.4.0"
bitvector = "0.1.5"
nalgebra = { version = "0.32.2", features = ["matrixmultiply"] }
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
clap = { version = "=4.2.4", features = ["cargo", "derive"] }
crossbeam = "0.8.2"
gmp-mpfr-sys = "1.5.2"
itertools = "0.10.5"
memoize = "0.4.0"
nalgebra-sparse = "0.9.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rug = { version = "=1.19.2", features = ["num-integer", "num-traits"] }
